--- a/dora/dora-yolo-rust/object_detection/Cargo.toml
+++ b/dora/dora-yolo-rust/object_detection/Cargo.toml
@@ -11,8 +11,8 @@ opencv = { version = "0.97.2", features = ["videoio", "imgcodecs"] }
 anyhow = "1.0"
 
 # Candle 机器学习库
-candle-core = { version = "0.9", features = ["accelerate"] }
-candle-nn = { version = "0.9", features = ["accelerate"] }
+candle-core = { version = "0.9", features = ["accelerate", "metal"] }
+candle-nn = { version = "0.9", features = ["accelerate", "metal"] }
 candle-transformers = { version = "0.9", features = ["accelerate"] } # 使用 accelerate 优化
 hf-hub = "0.4" # 用于下载模型
 tokenizers = "0.15"
